<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MainActivity"
    android:background="@color/black_trans">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_margin="30dp"
        >

        <Button
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:id="@+id/nadaljuj"
            android:background="@drawable/button_main"
            android:text="@string/nadaljuj"
            android:textColor="@color/white"
            android:textSize="35sp"
            android:typeface="serif"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"/>

        <Button
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:id="@+id/nova_igra"
            android:background="@drawable/button_main"
            android:text="@string/nova_igra"
            android:textColor="@color/white"
            android:textSize="35sp"
            android:typeface="serif"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"/>

        <Button
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:id="@+id/nalozi"
            android:background="@drawable/button_main"
            android:text="@string/nalozi"
            android:textColor="@color/white"
            android:textSize="35sp"
            android:typeface="serif"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"/>

        <Button
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:id="@+id/opcije"
            android:background="@drawable/button_main"
            android:text="@string/opcije"
            android:textColor="@color/white"
            android:textSize="35sp"
            android:typeface="serif"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"/>

    </LinearLayout>



</RelativeLayout>
