<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.mojca.ca.tarockfinal.Pravila"
    android:orientation="vertical"
    android:background="@color/black_trans">

    <TextView android:text="@string/pravila"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:gravity="center"
        android:typeface="serif"
        android:layout_weight="1"
        android:textColor="@color/white"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="horizontal"
        >

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="2"
            android:text="@string/vrednost_mondfang"
            android:typeface="serif"
            android:layout_gravity="center"
            android:gravity="center"
            android:textColor="@color/white"/>

        <EditText
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="25"
            android:layout_gravity="center"
            android:gravity="center"
            android:id="@+id/mf"
            android:textColor="@color/white"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="horizontal"
        android:textColor="@color/white">

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="2"
            android:text="@string/vrednost_barvni_valat"
            android:typeface="serif"
            android:layout_gravity="center"
            android:gravity="center"
            android:textColor="@color/white"/>

        <EditText
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="125"
            android:layout_gravity="center"
            android:gravity="center"
            android:id="@+id/barvni"
            android:textColor="@color/white"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="horizontal"
        android:textColor="@color/white">

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="2"
            android:text="@string/vrednost_renons"
            android:typeface="serif"
            android:layout_gravity="center"
            android:gravity="center"
            android:textColor="@color/white"/>

        <EditText
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="70"
            android:layout_gravity="center"
            android:gravity="center"
            android:id="@+id/renons"
            android:textColor="@color/white"/>

    </LinearLayout>


    <TextView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:text="@string/radelciKlop"
        android:typeface="serif"
        android:layout_gravity="center"
        android:gravity="center"
        android:textColor="@color/white"/>

    <RadioGroup
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="horizontal">

        <RadioButton
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:layout_gravity="center"
            android:gravity="center"
            android:text="@string/ja"
            android:typeface="serif"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:checked="true"
            android:id="@+id/yesRadelciKlop"
            android:textColor="@color/white"/>

        <RadioButton
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:layout_gravity="center"
            android:gravity="center"
            android:text="@string/ne"
            android:typeface="serif"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:textColor="@color/white"/>

    </RadioGroup>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:text="@string/polnaKlop"
        android:typeface="serif"
        android:layout_gravity="center"
        android:gravity="center"
        android:textColor="@color/white"/>

    <RadioGroup
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="horizontal">

        <RadioButton
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:layout_gravity="center"
            android:gravity="center"
            android:text="@string/ja"
            android:typeface="serif"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:checked="true"
            android:id="@+id/yesPolnaKlop"
            android:textColor="@color/white"/>

        <RadioButton
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:layout_gravity="center"
            android:gravity="center"
            android:text="@string/ne"
            android:typeface="serif"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:textColor="@color/white"/>

    </RadioGroup>

    <ImageButton
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:src="@drawable/arrow_right"
        android:id="@+id/forward"
        android:background="@null"
        android:layout_gravity="center"
        />



</LinearLayout>
